--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -69,7 +69,7 @@
   \begin{abstract}
 \afterpage{\null\newpage}
 
-I dagsläget finns det en mängd utmaningar och svårigheter inom den traditionella designprocessen för UX, User Experience. Dessa utmaningar har en påverkan på hur tidskrävande och kostsam en designprocess för UX kan vara. Några av dem är att få prototyper att likna slutprodukten och kommunikationssvårigheter mellan UX-designers och utvecklare vid Agil projektmetodik. Det finns även svårigheter vid visualisering av strömmande data då informationen i data ska göras lättförståelig för användaren och att möjliggöra användaren att nå önskad information.
+I dagsläget finns det en mängd utmaningar och svårigheter inom den traditionella designprocessen för UX, User Experience. Dessa utmaningar har en påverkan på hur tidskrävande och kostsam en designprocess för UX kan vara. Några av dem är att få prototyper att likna slutprodukten och kommunikationssvårigheter mellan UX-designers och utvecklare vid Agil projektmetodik. Några svårigheter som finns vid visualisering av strömmande data är att göra den lättförståelig för användaren och möjliggöra användaren att nå önskad information.
 
 För att undersöka dessa svårigheter togs en designprocess för UX, att användas med datavisualiseringsverktyget Kibana, fram. För att kunna utvärdera och bedöma designprocessen för UX, skapades en interaktiv \textit{dashboard} som presenterade Transportstyrelsens data från betalstationer. Efter framtagningen av designprocessen för UX konstaterades det att prototypskapandet och testningen optimerades. Fördelar med att använda Kibana var att designprocessen hade fokus på produkten och inte prototypen vilket förbättrade testningen med slutanvändaren och därmed även slutprodukten. Det fanns dock nackdelar då Kibana användes vilka var begränsningar i modifiering av användargränssnittet och att systemet behövde vara klart innan designprocessen för UX kunde påbörjas. 
 
@@ -85,7 +85,7 @@ För att undersöka dessa svårigheter togs en designprocess för UX, att använ
 
 \begin{abstract}
 
-In the current situation there are a lot of challenges and difficulties in the traditional design process for UX, User Experience. These challenges have an impact on how time consuming and costly a design process for UX can be. Some of them are to create prototypes that resemble the end product and communication difficulties between UX-designers and developers that follow an Agile project methodology. There are also difficulties in visualizing streaming data, as information in data must be made easy to understand for the user and to enable the user to get desired information.
+In the current situation there are a lot of challenges and difficulties in the traditional design process for UX, User Experience. These challenges have an impact on how time consuming and costly a design process for UX can be. Some of them are to create prototypes that resemble the end product and communication difficulties between UX-designers and developers that follow an Agile project methodology. There are also difficulties in visualizing streaming data, as information in data must be made easy to understand for the user and the users must be able to get desired information.
  
 To investigate these difficulties, a design process for UX was created to be used with the Kibana data visualization tool. In order to evaluate and assess the design process for UX, an interactive \textit{dashboard} was created that presented data from Swedish payment stations. After developing the design process for UX, it was found that prototype creation and testing were optimized. The advantages of using Kibana were that the design process focused on the product and not the prototype, which improved the testing with the end user and therefor also the end product. However, there were disadvantages when Kibana was used which were limitations in modifying the user interface and that the system needed to be ready before the UX design process could begin.
 
@@ -122,13 +122,13 @@ Detta kapitel inleds med en problemformulering som förklarar vilka svårigheter
 \section{Problemformuläring}
 För 30 år sedan uppstod konceptet användarupplevelse, mer känt som UX, som står för engelskans User Experience. Det är kvalitén på upplevelsen och erfarenheten som användaren får vid interaktion med en viss produkt, ett system eller en tjänst. För att ge användare en bra användarupplevelse bör användargränssnittet, d.v.s. det grafiska gränssnittet, vara användarvänligt. Detta innebär att gränssnittet ska vara lätt att använda och förstå samt uppfylla de avsedda användarnas behov och hjälpa användaren att utföra den önskade uppgiften. 
 
-Dock är det inte alltid lätt att skapa användargränssnitt för produkter, speciellt när det gäller att visualisera strömmande data. Svårigheten ligger i att göra informationen i data så lättförståelig för användaren som möjligt och att möjliggöra användaren att få ut önskad information. Svårigheten beror på en mängd faktorer som datats komplexitet samt hastigheten och mängden data som strömmar in. 
+Dock är det inte alltid lätt att skapa användargränssnitt för produkter, speciellt när det gäller att visualisera strömmande data. Svårigheten ligger i att göra informationen i data så lättförståelig för användaren som möjligt och att möjliggöra användaren att få ut önskad information. Dessa svårigheter beror på en mängd faktorer som datats komplexitet samt hastigheten och mängden data som strömmar in. 
 
-För att ta fram användargränssnitt bör en designprocess för UX, även kallat UX-designprocess, följas. Dock finns det i dagsläget många utmaningar i denna designprocess. Några av dessa svårigheter är att prototyper sällan är lika slutprodukten vad det gäller funktionalitet, användargränssnitt och användarupplevelsen. Dessutom får UX-designers sällan tillräckligt med input från utvecklare vad det gäller funktionella begränsningar. Det utgör ett problem då användaren skulle kunna testa funktionalitet som inte är möjlig att skapa i systemet eller att användaren missar att testa funktionalitet som är möjlig att skapa. Anledningen till varför användargränssnittet skulle kunna variera i prototypen och slutprodukten är att UX-designers ofta inte använder samma visualiseringsverktyg som produktutvecklarna. Kombinationen av att utseendet och funktionaliteten kan variera skulle i sin tur leda till att användarupplevelsen vid testning av prototypen inte skulle vara likadan som användarupplevelsen vid användning av slutprodukten.  
+För att ta fram ett användargränssnitt bör en designprocess för UX, även kallat UX-designprocess, följas. Dock finns det i dagsläget många utmaningar i denna designprocess. Några av dessa svårigheter är att prototyper sällan är lika slutprodukten vad det gäller funktionalitet, användargränssnitt och användarupplevelsen. Dessutom får UX-designers sällan tillräckligt med \textit{input} från utvecklare vad det gäller funktionella begränsningar. Det utgör ett problem då användaren skulle kunna testa funktionalitet som inte är möjlig att skapa i systemet eller att användaren missar att testa funktionalitet som är möjlig att skapa. Anledningen till varför användargränssnittet skulle kunna variera i prototypen och slutprodukten är att UX-designers ofta inte använder samma visualiseringsverktyg som produktutvecklarna. Kombinationen av att utseendet och funktionaliteten kan variera skulle i sin tur leda till att användarupplevelsen vid testning av prototypen inte skulle vara likadan som användarupplevelsen vid användning av slutprodukten.  
 
 Ytterligare en svårighet som finns vid framtagandet av interaktiva prototyper är att detta kan vara väldigt tidskrävande för en UX-designer. Detta eftersom resultatet av varje användarinteraktion som ska finnas i slutprodukten även skulle behöva tas fram för prototypen. Därför leder detta problem, samt de ovannämnda, till att extra tid måste läggas ned av UX-designern vilket även ökar kostnader. 
 
-I detta projekt användes därför ett verktyg där produktframtagningen och prototypskapandet kunde ske samtidigt. Syftet var att utvärdera designprocessen vid användningen av det verktyget jämfört med den vanligen använda designprocessen. Verktyget skulle användas för hämtning, tillfällig lagring och visualisering av data. Det fanns en mängd olika verktyg för detta som till exempel Elastic Stack, Loggly och Scalyr. Eftersom Elastic Stack säger sig vara “en världsledande mjukvaruleverantör för att göra strukturerad och ostrukturerade data användbar i realtid för användarfall som sökning, loggning, säkerhet och analys” [1] valdes detta verktyg. I samma artikel presenteras statistiken att Elastic Stack har över 100 miljoner nedladdningar vilket visar på att det är extremt populärt och använt. Dessutom var Elasticsearch, som är sökmotorn i Elastic Stack och möjliggör lagring, sökning och analys av stora mängder data i nära realtid, den mest populära sökmotorn enligt en rakning av sökmotorer som gjorts på DB-Engines i Maj 2018 [2]. Eftersom Kibana används för visualisering av data som finns i Elasticsearch är det även möjligt för alla Elasticsearch användare att använda Kibana vilket skulle innebära en stor mängd potentiella användare av Kibana. Under projektets gång låg fokus på Kibana eftersom det är visualiseringsverktyget i Elastic Stack.
+I detta projekt användes därför ett verktyg prototypskapandet kunde ersättas med där produktframtagningen. Syftet var att utvärdera designprocessen vid användningen av det verktyget jämfört med den vanligen använda designprocessen. Verktyget skulle användas för hämtning, tillfällig lagring och visualisering av data. Det fanns en mängd olika verktyg för detta som till exempel Elastic Stack, Loggly och Scalyr. Eftersom Elastic Stack säger sig vara “en världsledande mjukvaruleverantör för att göra strukturerad och ostrukturerade data användbar i realtid för användarfall som sökning, loggning, säkerhet och analys” [1] valdes detta verktyg. I samma artikel presenteras statistiken att Elastic Stack har över 100 miljoner nedladdningar vilket visar på att det är extremt populärt och använt. Dessutom var Elasticsearch, som är sökmotorn i Elastic Stack och möjliggör lagring, sökning och analys av stora mängder data i nära realtid, den mest populära sökmotorn enligt en rakning av sökmotorer som gjorts på DB-Engines i Maj 2018 [2]. Eftersom Kibana används för visualisering av data som finns i Elasticsearch är det även möjligt för alla Elasticsearch användare att använda Kibana vilket skulle innebära en stor mängd potentiella användare av Kibana. Under projektets gång låg fokus på Kibana eftersom det är visualiseringsverktyget i Elastic Stack.
 
 Dataströmmen som användes som exempeldata vid visualiseringen var från Transportstyrelsens öppna databas gällande betalstationer i Sverige. Detta möjliggjorde en visualisering av trafik där användare kunde få information som till exempel antal fordon som passerade ett valt område, fördelning av fordonstyper, var fordonsägare som åkte igenom valda betalstationer bodde m.m.
 
@@ -233,7 +233,7 @@ I rapporten “User experience prototyping - a literature review” [17] diskute
 
 Enligt Kate Pernice i Nielsen Norman Group [18] måste en prototyp av ett användargränssnitt testas för att möjliggöra bedömningen av dess användbarhet. Vid testning av prototypen måste alltså användaren få gensvar från prototypen vid handlingar och detta kan göras på två sätt. Det ena sättet går ut på att en person som är bekant med designen ska ge gensvar till användare testar prototypen och en sådan prototyp kallas för statisk. Det andra sättet som implementera dessa gensvar vilket resulterar i en interaktiv prototyp. Skapandet av en sådan prototyp kan bli tidskrävande. Även Pernice lyfter fram de områden där \textit{fidelity} kan variera vilka är interaktivitet, innehåll, kommando och visuellt. 
 
-Vid utveckling av design för ett system, en tjänst eller en produkt krävs det även ett team som ska utveckla det som ligger bakom designen och utgör funktionaliteten. Teamet är delar av större organisationer och enligt en undersökning gjord av Project Management Institute [19] använder sig 71\% av de 3234 organisationer från olika branscher som deltog i undersökningen, av Agila metoder ibland, ofta eller alltid. När UX-designers ska följa Agila metoder kan det bli problematiskt. I en rapport skriven av Michael Budwig, Soojin Jeong och Kuldeep Kelkar vid namn “When User Experience Met Agile: A Case Study” [20] beskrivs svårigheter som kan uppstå vid denna situation. På grund av att UX-teamet behöver utveckla designen innan utvecklingsteamet har utvecklat det bakomliggande systemet skedde det ofta att UX-teamet inte kunde få nödvändiga inputs från utvecklingsgruppens medlemmar. Vid uppkomsten av problem och nya krav för produkten i sprinter är UX-teamet tvungna att hantera både nya problem som har uppkommit, de som var kvar sedan tidigare och samtidigt leverera sina primära projekt i tid. Detta kan orsaka en stressig och negativ arbetsmiljö för UX-teamet. 
+Vid utveckling av design för ett system, en tjänst eller en produkt krävs det även ett team som ska utveckla det som ligger bakom designen och utgör funktionaliteten. Teamet är delar av större organisationer och enligt en undersökning gjord av Project Management Institute [19] använder sig 71\% av de 3234 organisationer från olika branscher som deltog i undersökningen, av Agila metoder ibland, ofta eller alltid. När UX-designers ska följa Agila metoder kan det bli problematiskt. I en rapport skriven av Michael Budwig, Soojin Jeong och Kuldeep Kelkar vid namn “When User Experience Met Agile: A Case Study” [20] beskrivs svårigheter som kan uppstå vid denna situation. På grund av att UX-teamet behöver utveckla designen innan utvecklingsteamet har utvecklat det bakomliggande systemet skedde det ofta att UX-teamet inte kunde få nödvändiga \textit{inputs} från utvecklingsgruppens medlemmar. Vid uppkomsten av problem och nya krav för produkten i sprinter är UX-teamet tvungna att hantera både nya problem som har uppkommit, de som var kvar sedan tidigare och samtidigt leverera sina primära projekt i tid. Detta kan orsaka en stressig och negativ arbetsmiljö för UX-teamet. 
 
 I rapporten “Experience Prototyping” [21] påpekas det att designers borde utforska genom att göra, eftersom även små ändringar i ett användargränssnitt kan ha stora konsekvenser i den slutliga användarupplevelsen. Rapporten lyfter även fram betydelsen av skapandet av flera prototyper och påverkan de kan ha på slutprodukten. Detta eftersom en enda prototyp inte är tillräcklig för att designern ska kunna bestämma vilka element som ska användas och hur de ska presenteras i användargränssnittet. Ett sätt att ta reda på designmöjligheter och identifiera möjliga problem är genom direkt användarinteraktion med systemet vilket uppnås med \textit{high-fidelity} prototyper vilket oftast är kostsamt och därför kan det hända att det ofta inte är möjligt att genomföra.
 
@@ -278,7 +278,7 @@ Elastic stack är ett verktyg som kan ta data från vilken källa som helst, i v
 
 \subsection{Logstash} 
 
-Enligt produktbeskrivningen för Logstash på Elastic Stacks hemsida [28] är Logstash en dataprocessor för server-sidan som samlar data från många olika källor samtidigt, förvandlar dem och skickar sedan dem till det \textit{stash} som anges. Detta är ofta Elasticsearch eftersom de har en mycket stark synergi mellan varandra. Processhanteringen är en pipelinemed tre steg: inputs $\rightarrow$ filter $\rightarrow$ outputs. Inputs genererar händelser, filter ändrar dem och outputs skickar dem någon annanstans.
+Enligt produktbeskrivningen för Logstash på Elastic Stacks hemsida [28] är Logstash en dataprocessor för server-sidan som samlar data från många olika källor samtidigt, förvandlar dem och skickar sedan dem till det \textit{stash} som anges. Detta är ofta Elasticsearch eftersom de har en mycket stark synergi mellan varandra. Processhanteringen är en pipelinemed tre steg: \textit{inputs} $\rightarrow$ filter $\rightarrow$ \textit{outputs}. \textit{Inputs} genererar händelser, filter ändrar dem och \textit{outputs} skickar dem någon annanstans.
 
 \subsection{Beats}
 
@@ -345,7 +345,7 @@ I Figur 3.1 representerar pilen dataflödet från det att data hämtas till att 
 
 Det började med en RESTful webbtjänst som efterfrågade Transportstyrelsens data genom det öppna API:et som fanns tillgängligt på Transportstyrelsens hemsida. Vid förfrågan av data under en viss tidsperiod returnerades en lista med passager och deras egenskaper. Dessa passager modifierades och skickades vidare till Logstash som skulle skicka data till Elasticsearch. Efter det hämtades data från Elasticsearch in i Kibana för att möjliggöra visualiseringen av dem.  
 
-Eftersom data som användes var statisk skapades en dataström av dessa data med hjälp av webbtjänsten. Detta gjordes genom att modifiera tiden i data som kom in i webbtjänsten, i sekundnivå. För att kunna använda dataströmmen som skapades och visualisera den i Kibana så krävdes modifiering av data. Detta gjordes genom att ändra format på datatyper, som tid och datum, vilket gjordes i webbtjänsten innan data skickades vidare till Logstash. Dessutom var det nödvändigt att lägga till information om geografiska punkter på den data som visualiserades för att möjliggöra visualisering av data i kartor. Eftersom regioner som skulle visualiseras saknades i Kibana behövdes även denna information tas fram. Informationen om regioner, som i detta fall var svenska kommuner och län, som fanns tillgängliga var i ett format som inte var kompatibelt med Kibana. På grund av detta skapades ett dokument som innehöll denna information och lades till i Kibanas regionsdata. Ytterligare ett tillägg som behövdes på data var geografiska koordinater för betalstationer. Detta för att kunna visualisera trafikintensitet baserad på betalstationer. Det gjordes genom att ta fram ett dokument som innehöll koordinater för betalstationerna. Informationen om koordinater lades till i all data som hämtades genom webbtjänsten och skickades vidare till Logstash. 
+Eftersom data som användes var statisk skapades en dataström av dessa data med hjälp av webbtjänsten. Detta gjordes genom att modifiera tiden i data som kom in i webbtjänsten, i sekundnivå. För att kunna använda dataströmmen som skapades och visualisera den i Kibana så krävdes modifiering av data. Detta gjordes genom att ändra format på datatyper, som tid och datum, vilket gjordes i webbtjänsten innan data skickades vidare till Logstash. Dessutom var det nödvändigt att lägga till information om geografiska punkter på den data som visualiserades för att möjliggöra visualisering av data i kartor. Eftersom regioner som skulle visualiseras saknades i Kibana behövdes även denna information tas fram. Informationen om regioner, som i detta fall var svenska kommuner och län, som fanns tillgängliga var i ett format som inte var kompatibelt med Kibana. På grund av detta skapades ett dokument som innehöll denna information och lades till i Kibanas regionsdata. Ytterligare ett tillägg som behövdes på data var geografiska koordinater för betalstationer. Detta för att kunna visualisera trafikintensitet baserat på betalstationer. Det gjordes genom att ta fram ett dokument som innehöll koordinater för betalstationerna. Informationen om koordinater lades till i all data som hämtades genom webbtjänsten och skickades vidare till Logstash. 
 
 I tabell 3.1 presenteras vilka egenskaper en passage hade efter modifiering. Dessa egenskaper användes sedan för visualisering. 
 \newpage
@@ -500,9 +500,9 @@ Det första steget gick ut på att förstå användarna och deras behov. Det gjo
 \begin{itemize}
 \item Hur många bilar åker igenom varje betalstation och/eller stad?
 \item Varifrån kommer bilar som åker genom betalstationerna? 
-\item Hur många fordon som passerade den senaste minuten? 
-\item Hur ser trafikfördelningen ut baserad på riktning? 
-\item Hur ser trafikfördelningen ut baserad på körfält? 
+\item Hur många fordon passerade den senaste minuten? 
+\item Hur ser trafikfördelningen ut baserat på riktning? 
+\item Hur ser trafikfördelningen ut baserat på körfält? 
 \item Vilken är den mest populära fordonstypen?
 \end{itemize}
 
@@ -542,17 +542,17 @@ Därefter utfördes testning av \textit{dashboarden} i en grupp av fem personer 
 
 \item Avancerad trafikförståelse: Efter de första uppgifterna upplevdes det lättare att hantera \textit{dashboarden} men det förblev svårt att kombinera flera olika UI-element för att ta fram önskad information. Det var otydligt hur interaktion med UI-element i \textit{dashboarden} kunde användas för framtagandet av information. 
 
-\item Sammanfattning: Det uppmärksammades att även mer förklaring gällande UI-element och deras användning borde läggas till. Det önskades också en bättre fördelning av UI-element i \textit{dashboarden} för att öka förståelse och minska förvirringen.
+\item Sammanfattning: Det uppmärksammades att även mer förklaring gällande UI-element och deras användning borde läggas till. Det önskades också en bättre fördelning av UI-element i \textit{dashboarden} för att öka förståelsen och minska förvirringen.
 \end{itemize}
 
 \item Andra iterationens testresultat:
 
 \begin{itemize}
-\item Allmänna frågor: Den andra testningen visade beskrivningarna och rubrikerna av UI-element hade blivit lättare att identifiera och förstå men det fanns rum för förbättring. Det fanns ett tydligare sammanhang i \textit{dashboarden} men några ändringar skulle kunna göras gällande antalet element som var placerade i \textit{dashboarden}.
+\item Allmänna frågor: Den andra testningen visade att beskrivningarna och rubrikerna av UI-element hade blivit lättare att identifiera och förstå men det fanns rum för förbättring. Det fanns ett tydligare sammanhang i \textit{dashboarden} men några ändringar skulle kunna göras gällande antalet element som var placerade i \textit{dashboarden}.
 
-\item Grundläggande trafikförståelse: Sökningen underlättades och det var mer lättförståeligt hur önskad information kunde tas fram men det var fortfarande svårt att förstå visa UI-element. Det var dock svårt att identifiera för vilken tidpunkt data representerades.
+\item Grundläggande trafikförståelse: Sökningen underlättades och det var mer lättförståeligt hur önskad information kunde tas fram men det var fortfarande svårt att förstå vissa UI-element. Det var även svårt att identifiera från vilken tidpunkt data representerades.
 
-\item Avancerad trafikförståelse: Det var många UI-element placerade i slutet av \textit{dashboarden} vilket orsakade förvirring och extra letande för att hitta vilket UI-element som skulle användas för framtagandet av önskad information. Uppgifterna utfördes enklare och \textit{dashboard} tillbringade mer förståelse. Det uttrycktes önskemål om mer detaljerad information om betalstationerna utan att behöva interagera med \textit{dashboarden} mer.
+\item Avancerad trafikförståelse: Det var många UI-element placerade i slutet av \textit{dashboarden} vilket orsakade förvirring och extra letande för att hitta vilket UI-element som skulle användas för framtagandet av önskad information. Uppgifterna utfördes enklare och testarna förstod mer av informationen i \textit{dashboarden}. Det uttrycktes önskemål om mer detaljerad information om betalstationerna utan att behöva interagera med \textit{dashboarden} mer.
 
 \item Sammanfattning: \textit{Dashboarden} var strukturerad och följde ett mönster men det var fortfarande överväldigande i den nedre delen på grund av att det fanns för många UI-element. Dessa skulle kunna sammanfogas så att all data i skulle kunna visualiseras i ett enda element.
 \end{itemize}
@@ -560,11 +560,11 @@ Därefter utfördes testning av \textit{dashboarden} i en grupp av fem personer 
 \item Tredje iterationens testresultat: 
 
 \begin{itemize}
-\item Allmänna frågor: Vid den tredje testningen upplevdes \textit{dashboarden} lättare att förstå enligt testarna. Beskrivningen och instruktioner gav tillräckligt med information för att öka förståelsen av data som presenterades i UI-elementen. Detta underlättade även sökningar i \textit{dashboarden}. 
+\item Allmänna frågor: Vid den tredje testningen upplevdes \textit{dashboarden} lättare att förstå. Beskrivningen och instruktioner gav tillräckligt med information för att öka förståelsen av data som presenterades i UI-elementen. Detta underlättade även sökningar i \textit{dashboarden}. 
 
 \item Grundläggande trafikförståelse: Sökningen, filtrering och interaktion med UI-element upplevdes lättare. Tidpunkten för data som visualiserades i varje UI-element kunde identifieras tack vare förklaringar i rubriker. Dessutom var relationerna mellan UI-elementen i \textit{dashboarden} lättare att förstå.
 
-\item Avancerad trafikförståelse: Testarna upplevde att uppgifterna kunde utföras mycket snabbare och information togs ut på genom en mer intuitiv process. UI-elementen som användes ledde till en snabbare identifiering av information i \textit{dashboarden} i denna iteration. 
+\item Avancerad trafikförståelse: Testarna upplevde att uppgifterna kunde utföras mycket snabbare och information togs ut på ett mer intuitivt sätt. UI-elementen som användes ledde till en snabbare identifiering av information i \textit{dashboarden} i denna iteration. 
 
 \item Sammanfattning: I sin helhet var \textit{dashboarden} mer intuitiv. Förståelsen av \textit{dashboarden} ökades och det fanns en röd tråd i placering och presentation av UI-element samt i information som visualiserades. 
 \end{itemize}
@@ -581,8 +581,8 @@ I tabell 4.1 finns designprocessens genomförande sammanställd. Designkraven ko
       \hline
      \textbf{Designkrav} & \textbf{Lösningar} & \textbf{Visualisering} & \textbf{Fält}\\
      \hline
-  \multirow{3}{3cm}{Hur många bilar åker igenom varje betalstation och/ eller stad?} &  Trafikintensitet baserad på stad & Taggmoln  & SkatteObjekt\\\cline{2-4}
-  & \multirow{2}{3cm}{Trafikintensitet baserad på betalstationer} & Karta med koordinater
+  \multirow{3}{3cm}{Hur många bilar åker igenom varje betalstation och/ eller stad?} &  Trafikintensitet baserat på stad & Taggmoln  & SkatteObjekt\\\cline{2-4}
+  & \multirow{2}{3cm}{Trafikintensitet baserat på betalstationer} & Karta med koordinater
 & Geografisk Placering\\\cline{3-4}  
   & &  Taggmoln
 & Betalstationer \\ \hline
@@ -595,12 +595,12 @@ I tabell 4.1 finns designprocessens genomförande sammanställd. Designkraven ko
 Hur många fordon som passerade den senaste minuten? &Antal fordon
  & Antal  & PassageObjekt\\ \hline
  
- \multirow{2}{3cm}{Hur ser trafikfördelningen ut baserad på riktning?} &  Riktnings-fördelning&Cirkeldiagram& Riktning\\\cline{2-4}
+ \multirow{2}{3cm}{Hur ser trafikfördelningen ut baserat på riktning?} &  Riktnings-fördelning&Cirkeldiagram& Riktning\\\cline{2-4}
   &Körfälts-fördelning 
  & Cirkeldiagram  & Körfält\\ \hline
  
- \multirow{2}{3cm}{Vilken är den mest populära fordonstypen?} &  Trafikintensitet baserad på fordonstyp & Cirkeldiagram& Fordonstyp\\\cline{2-4}
-  &Trafikintensitet baserad på fordonstyp för de mest populära betalstationerna 
+ \multirow{2}{3cm}{Vilken är den mest populära fordonstypen?} &  Trafikintensitet baserat på fordonstyp & Cirkeldiagram& Fordonstyp\\\cline{2-4}
+  &Trafikintensitet baserat på fordonstyp för de mest populära betalstationerna 
  & Stapeldiagram  & TidsStämpel, Betalstation, Fordonstyp\\ \hline
 
 \end{tabular}
@@ -680,13 +680,13 @@ Dessa ovanstående begränsningar hade en stor påverkan på användargränssnit
 \subsection{Testa produkten mot slutanvändare genom djupintervjuer } 
 Testningen av produkten genomfördes genom att anteckna och fråga de möjliga slutanvändarna vid djupintervjuer. Eftersom ett stort fokus vid testningen låg vid att de som testades skulle utföra uppgifter som specificerats så ställdes frågor angående svårighetsgraden på uppgiften. De blev ombedda att betygsätta svårighetsnivån. Detta användes sedan för att analysera en iterering och se om förändringar som gjorts i designen hade underlättat för testarna att slutföra en specificerad uppgift. 
 
-Eftersom \textit{dashboarden} upplevdes rörig och ostrukturerad vid första itereringen lades mer beskrivande text för UI-element och distribuering av UI-element i \textit{dashboarden} ändrades. Svårigheterna var att hitta, läsa och tolka texten för att interagera med dem UI-elementen. Kartorna var inte intuitiva och de var svåra att hantera vilket innebar att filtreringen i \textit{dashboarden} var svår att utföra. Därför lades taggmoln till som underlättade filtreringen och hanteringen av \textit{dashboarden}. Det förekom att färgerna i UI-elementen var liknande nyanser vilket försvårade avläsningen av data och därför ändrades de till färgerna som kunde separeras från varandra vilket underlättade avläsning av värden.
+Eftersom \textit{dashboarden} upplevdes rörig och ostrukturerad vid första itereringen lades mer beskrivande text för UI-element och distribuering av UI-element i \textit{dashboarden} ändrades. Svårigheterna var att hitta, läsa och tolka texten för att interagera med de UI-elementen. Kartorna var inte intuitiva och de var svåra att hantera på grund av Kibanas sätt att möjliggöra filtrering i kartor. Detta innebar att filtreringen i \textit{dashboarden} var svår att utföra. Därför lades istället taggmoln till som underlättade filtreringen och hanteringen av \textit{dashboarden}. Det förekom att färgerna i UI-elementen var liknande nyanser vilket försvårade avläsningen av data och därför ändrades de till färger som kunde separeras från varandra vilket underlättade avläsning av värden.
 
-Trots alla förbättringar som gjordes efter första iterationen upplevdes \textit{dashboarden} som överväldigande eftersom många UI-element var placerade i den nedre delen av \textit{dashboarden}. Detta löstes genom att sammanställa information som presenterades i ett större UI-element. Ett exempel var att istället för att det fanns fyra olika diagram med olika fordonstyper så organiserades alla den information som presenterades i dem i ett stapeldiagram. Den presenterade antalet fordon i en tidsaxel som kunde filtreras genom ett cirkeldiagram som presenterade fördelningen av alla fordonstyper. Detta resulterade till en bättre förståelse och hantering av \textit{dashboarden}. För att underlätta framtagandet av önskad information ännu mer lades ett sökningsfält till som användes för sökningar baserat på betalstationer. Vid sökning efter en viss betalstation anpassades alla UI-element i denna sökningen. Ytterligare något som gjordes i denna iterering var att den beskrivande texten i UI-elementen förbättrades för att tydligare specificera tidpunkterna för data som presenterades. 
+Trots alla förbättringar som gjordes efter första iterationen upplevdes \textit{dashboarden} som överväldigande eftersom många UI-element var placerade i den nedre delen av \textit{dashboarden}. Detta löstes genom att sammanställa information som presenterades i ett större UI-element. Ett exempel var att istället för att det fanns fyra olika diagram med olika fordonstyper så sammanfogades all den information i ett stapeldiagram. Den presenterade antalet fordon i en tidsaxel som kunde filtreras genom ett cirkeldiagram som presenterade fördelningen av alla fordonstyper. Detta resulterade i en bättre förståelse och hantering av \textit{dashboarden}. För att underlätta framtagandet av önskad information ännu mer lades ett sökningsfält till som användes för sökningar baserat på betalstationer. Vid sökning efter en viss betalstation anpassades alla UI-element i denna sökningen. Ytterligare något som gjordes i denna iterering var att den beskrivande texten i UI-elementen förbättrades för att tydligare specificera tidpunkterna för data som presenterades. 
 
 Vid den tredje itereringen upplevdes \textit{dashboarden} mer intuitiv, strukturerad och lättare att interagera med. Information som UI-elementen presenterade var tydlig och beskrivande texten var mer synlig. 
 
-Efter att projektet slutförts ansåg författarna att en bättre metod hade kunnat väljas för att mäta svårighetsnivå på uppgifter. När testarna själva skulle betygsätta svårighet var det väldigt beroende av känslor och åsikter, vilket ur ett UX-perspektiv var bra, men någonting som hade kunnat ge mer konkreta resultat som hade varit värdefullt vid analysen av testningen hade varit att ta tid på en testare från att uppgiften blivit förklarad till att den blivit slutförd. 
+Efter att projektet slutförts ansåg författarna att en bättre metod hade kunnat väljas för att mäta svårighetsnivån på uppgifter. När testarna själva skulle betygsätta svårighet var det väldigt beroende av känslor och åsikter, vilket ur ett UX-perspektiv var bra, men någonting som hade kunnat ge mer konkreta resultat som hade varit värdefullt vid analysen av testningen hade varit att ta tid på en testare från att uppgiften blivit förklarad till att den blivit slutförd. 
 
 \section{Förberedelse av data för visualisering}
 För att möjliggöra tillämpningen av UX-designprocessen vid användning av Kibana implementerades \textit{full-stack} utveckling under detta projekt. Vid utvecklingen förekom några svårigheter angående förberedelsen av data inför visualisering. Datakällan som valdes var statisk och mycket tid ägnades åt att simulera en dataström från den källan. Hade författarna istället valt en datakälla som redan var strömmande hade den tiden kunnat läggas på andra saker i projektet. Datakällan som valdes borde också varit så konsistent och fullständigt för visualisering som möjligt. 
@@ -695,15 +695,15 @@ I det här projektet lades en stor del av tiden åt modifiering av data så att 
 
 Ytterligare en svårighet som författarna stött på var vid visualisering av geografiska data i Kibana. Datakällan innehöll geografisk relaterad information men inte koordinater för att möjliggöra visualisering i Kibana. Det krävdes en stor informationssökning för att få fram koordinater för den data och mycket tid för modifiering av den informationen för att vara i ett kompatibelt format med Kibana. När informationen hittades i det önskade formatet lades denna information till i varje objekt som hämtades från datakällan. Hela denna process hade kunnat undvikas om det hade valts en datakälla som innehöll all information för visualisering och om informationen var kompatibel med Kibana.
 
-Kibana erbjöd stöd för visualisering av data på kartor men endast för ett begränsat antal länder och eftersom den datakälla som användes i detta projekt innehöll svensk geografisk information som inte fanns tillgängligt ledde detta till en till svårighet. Författarna behövde hitta denna information, modifiera den till rätt format och lägga till den i Kibana för att möjliggöra visualisering av data på kartor. Detta var en tidskrävande process som borde tas hänsyn till när det önskas att utföra visualisering av data i kartor. Kibana är ett open-sourceprojekt och därför finns det många möjligheter för förbättringar av detta.  
+Kibana erbjöd stöd för visualisering av data på kartor men endast för ett begränsat antal länder och eftersom den datakälla som användes i detta projekt innehöll svensk geografisk information som inte fanns tillgänglig ledde detta till en till svårighet. Författarna behövde hitta denna information, modifiera den till rätt format och lägga till den i Kibana för att möjliggöra visualisering av data på kartor. Detta var en tidskrävande process som borde tas hänsyn till när det önskas att utföra visualisering av data i kartor. Kibana är ett open-sourceprojekt och därför finns det många möjligheter för förbättringar av detta.  
 
 \section{Ekonomiska och arbetsmiljömässiga aspekter}
-Under detta alla moment i detta projekt har ekonomiska och arbetsmiljömässiga aspekter betraktats. Fokus låg under hela projektet på att se om och hur Kibana kunde underlätta för UX-designprocessen vid visualisering av data. Om Kibana användes med data som var kompatibel med Kibana och systemet var avklarat innan UX-designprocessen påbörjades kunde det påverka de ekonomiska och arbetsmiljömässiga aspekterna positivt. Ur det ekonomiska perspektivet skulle företaget som tillämpade denna UX-designprocess gynnas eftersom mindre tid skulle läggas av arbetarna jämfört med den traditionella UX-designprocessen, vilket skulle spara företaget pengar. Ur det arbetsmiljömässiga perspektivet kunde kommunikationssvårigheter mellan UX-designers och utvecklare elimineras vilket ledde till en bättre arbetsmiljö för båda parterna som kunde lägga fokus på respektive individuella områden.
+Under alla moment i detta projekt har ekonomiska och arbetsmiljömässiga aspekter betraktats. Fokus låg under hela projektet på att se om och hur Kibana kunde underlätta UX-designprocessen vid visualisering av data. Om Kibana användes med data som var kompatibel med Kibana och systemet var avklarat innan UX-designprocessen påbörjades kunde det påverka de ekonomiska och arbetsmiljömässiga aspekterna positivt. Ur det ekonomiska perspektivet skulle företaget som tillämpade denna UX-designprocess gynnas eftersom mindre tid skulle läggas av arbetarna jämfört med den traditionella UX-designprocessen, vilket skulle spara företaget pengar. Ur det arbetsmiljömässiga perspektivet kunde kommunikationssvårigheter mellan UX-designers och utvecklare elimineras vilket ledde till en bättre arbetsmiljö för båda parterna som kunde lägga fokus på respektive individuella områden.
 
 \afterpage{\null\newpage}
 
 \chapter{Slutsatser}
-Det finns många utmaningar och brister inom den traditionella designprocessen för UX som påverkar tiden och pengar som spenderas under designprocessen för UX. Under detta projekt ställdes följande utmaningar i fokus: att få prototyper att likna slutprodukten och kommunikationssvårigheter mellan UX-designers och utvecklare vid Agil projektmetodik. Efter projektet konstaterades det att Kibana kan förbättra effektiviteten av designprocessen för UX eftersom prototypskapandet och testningen optimerades. Dessutom  kan kommunikationssvårigheter mellan UX-designers och utvecklare elimineras vid användning av Kibana eftersom systemet måste vara klart innan UX-designers kan börja med visualisering i Kibana. 
+Det finns många utmaningar och brister inom den traditionella designprocessen för UX som påverkar tiden och pengarna som spenderas under designprocessen för UX. Under detta projekt ställdes följande utmaningar i fokus: att få prototyper att likna slutprodukten och kommunikationssvårigheter mellan UX-designers och utvecklare vid Agil projektmetodik. Efter projektet konstaterades det att Kibana kan förbättra effektiviteten av designprocessen för UX eftersom prototypskapandet och testningen optimerades. Dessutom  kan kommunikationssvårigheter mellan UX-designers och utvecklare elimineras vid användning av Kibana eftersom systemet måste vara klart innan UX-designers kan börja med visualisering i Kibana. 
 
 Fördelarna med designprocessen för UX då Kibana används var att fokus låg på produkten och inte prototypen vilket resulterade i mer effektiv testning med slutanvändaren. Nackdelarna i denna designprocess för UX var begränsningar i modifiering av användargränssnittet som Kibana har, att systemet skulle vara klart innan visualisering av data i UI-element samt att data som används måste vara kompatibla med Kibana.  
 
